==> 5spell/mouse-firmware/components/PMW3360/PMW3360.cpp <==
#include "PMW3360.h"
#include "esp_rom_sys.h"
#include "esp_timer.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#define BEGIN_COM                                                              \
  cs_low();                                                                    \
  esp_rom_delay_us(1)
#define END_COM                                                                \
  esp_rom_delay_us(1);                                                         \
  cs_high()

esp_err_t PMW3360::begin(unsigned int CPI) {
  inBurst = false;
  gpio_set_direction(cs, GPIO_MODE_OUTPUT);
  gpio_set_level(cs, 1);

  spi_device_interface_config_t devcfg = {};
  devcfg.mode = 3;
  devcfg.clock_speed_hz = 8 * 1000 * 1000;
  devcfg.spics_io_num = -1; // manual CS
  devcfg.queue_size = 1;

  spi_bus_add_device(spi_host, &devcfg, &spi_handle);

  // hard reset
  cs_high();
  cs_low();
  cs_high(); // ensure that the serial port is reset

  adns_write_reg(REG_Shutdown, 0xb6); // Shutdown first

  vTaskDelay(300);

  BEGIN_COM;
  esp_rom_delay_us(40);
  END_COM;
  esp_rom_delay_us(40);

  adns_write_reg(REG_Power_Up_Reset, 0x5a); // force reset

  vTaskDelay(50); // wait for it to reboot

  // read registers 0x02 to 0x06 (and discard the data)
  adns_read_reg(REG_Motion);
  adns_read_reg(REG_Delta_X_L);
  adns_read_reg(REG_Delta_X_H);
  adns_read_reg(REG_Delta_Y_L);
  adns_read_reg(REG_Delta_Y_H);
  // upload the firmware
  adns_upload_firmware();

  vTaskDelay(10);
  setCPI(CPI);

  if (check_signature()) {
    return ESP_OK;
  } else {
    return ESP_FAIL;
  }
}

PMW3360_DATA PMW3360::readBurst() {
  unsigned long fromLast = esp_timer_get_time() - lastBurst;
  uint8_t burstBuffer[12] = {};

  if (!inBurst || fromLast > 500 * 1000) {
    adns_write_reg(REG_Motion_Burst, 0x00);
    inBurst = true;
  }

  BEGIN_COM;
  spi_transfer(REG_Motion_Burst);
  esp_rom_delay_us(35); // waits for tSRAD

  for (int i = 0; i < 12; i++) { // read burst buffer
    burstBuffer[i] = spi_transfer(0x00);
  }

  esp_rom_delay_us(1); // tSCLK-NCS for read operation is 120ns

  END_COM;

  if (burstBuffer[0] &
      0b111) { // panic recovery, sometimes burst mode works weird.
    inBurst = false;
  }

  lastBurst = esp_timer_get_time();

  PMW3360_DATA data;

  bool motion = (burstBuffer[0] & 0x80) != 0;
  bool surface =
      (burstBuffer[0] & 0x08) == 0; // 0 if on surface / 1 if off surface

  uint8_t xl = burstBuffer[2];  // dx LSB
  uint8_t xh = burstBuffer[3];  // dx MSB
  uint8_t yl = burstBuffer[4];  // dy LSB
  uint8_t yh = burstBuffer[5];  // dy MSB
  uint8_t sl = burstBuffer[10]; // shutter LSB
  uint8_t sh = burstBuffer[11]; // shutter MSB

  int16_t x = (int16_t)-((xh << 8) | xl);
  int16_t y = (int16_t)-((yh << 8) | yl);

  unsigned int shutter = sh << 8 | sl;

  data.isMotion = motion;
  data.isOnSurface = surface;
  data.dx = x;
  data.dy = y;
  data.SQUAL = burstBuffer[6];
  data.rawDataSum = burstBuffer[7];
  data.maxRawData = burstBuffer[8];
  data.minRawData = burstBuffer[9];
  data.shutter = shutter;

  return data;
}

uint8_t PMW3360::adns_read_reg(uint8_t reg_addr) {
  if (reg_addr != REG_Motion_Burst) {
    inBurst = false;
  }

  BEGIN_COM;
  // send adress of the register, with MSBit = 0 to indicate it's a read
  spi_transfer(reg_addr & 0x7f);
  esp_rom_delay_us(100); // tSRAD is 25, but 100us seems to be stable.
  // read data
  uint8_t data = spi_transfer(0);

  END_COM;
  esp_rom_delay_us(19); //    tSRW/tSRR (=20us) minus tSCLK-NCS

  return data;
}

void PMW3360::adns_write_reg(uint8_t reg_addr, uint8_t data) {
  if (reg_addr != REG_Motion_Burst) {
    inBurst = false;
  }

  BEGIN_COM;
  // send adress of the register, with MSBit = 1 to indicate it's a write
  spi_transfer(reg_addr | 0x80);
  // sent data
  spi_transfer(data);

  esp_rom_delay_us(20); // tSCLK-NCS for write operation
  END_COM;
  esp_rom_delay_us(100); // tSWW/tSWR (=120us) minus tSCLK-NCS. Could be
                         // shortened, but is looks like a safe lower bound
}

void PMW3360::adns_upload_firmware() {
  // Write 0 to Rest_En bit of Config2 register to disable Rest mode.
  adns_write_reg(REG_Config2, 0x00);

  // write 0x1d in SROM_enable reg for initializing
  adns_write_reg(REG_SROM_Enable, 0x1d);

  // wait for more than one frame period
  vTaskDelay(10); // assume that the frame rate is as low as 100fps... even if
                  // it should never be that low

  // write 0x18 to SROM_enable to start SROM download
  adns_write_reg(REG_SROM_Enable, 0x18);

  // write the SROM file (=firmware data)

  BEGIN_COM;
  spi_transfer(REG_SROM_Load_Burst | 0x80); // write burst destination adress
  esp_rom_delay_us(15);

  // send all uint8_ts of the firmware
  unsigned char c;
  for (int i = 0; i < firmware_length; i++) {
    c = firmware_data[i];
    spi_transfer(c);
    esp_rom_delay_us(15);
  }

  // Read the SROM_ID register to verify the ID before any other register reads
  // or writes.
  adns_read_reg(REG_SROM_ID);

  // Write 0x00 (rest disable) to Config2 register for wired mouse or 0x20 for
  // wireless mouse design.
  adns_write_reg(REG_Config2, 0x00);

  END_COM;
}

void PMW3360::prepareImage() {
  adns_write_reg(REG_Config2, 0x00);

  adns_write_reg(REG_Frame_Capture, 0x83);
  adns_write_reg(REG_Frame_Capture, 0xc5);

  vTaskDelay(20);

  BEGIN_COM;
  spi_transfer(REG_Raw_Data_Burst & 0x7f);
  esp_rom_delay_us(20);
}

uint8_t PMW3360::readImagePixel() {
  uint8_t pixel = spi_transfer(0);
  esp_rom_delay_us(20);

  return pixel;
}
